qsk-macros/tests/fail/analyze/tap-toggle-unexpected-arguments.rs
use qsk_macros::remap;

fn main() {
    remap!(
        ModLayer: {
            F -> TapToggle(Navigation, F, MEOW),
        },
    );
}
