qsk-macros/tests/fail/analyze/tap-toggle-unexpected-arguments.stderr
error: unexpected argument
 --> tests/fail/analyze/tap-toggle-unexpected-arguments.rs:6:43
  |
6 |             F -> TapToggle(Navigation, F, MEOW),
  |                                           ^^^^
